apps/vaultwarden/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
